Removes iron man image and fixes z-index

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,6 @@ button {
 @keyframes memberSlideOut { from { right:0; } to { right:-250px; }  }
 
 .member-menu {
-    z-index: 1000000;
     position: fixed;
     right: -250px;
     width: 250px;
